--- a/BlazorFrontEnd/DockerFile
+++ b/BlazorFrontEnd/DockerFile
@@ -1,5 +1,14 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:5.0
-COPY ./ /app
-WORKDIR ./app
+﻿# https://hub.docker.com/_/microsoft-dotnet
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+WORKDIR /source
+
+# copy everything else and build app
+COPY ./ ./aspnetapp/
+WORKDIR /source/aspnetapp
 RUN dotnet publish -c release -o /app --no-restore
-ENTRYPOINT ["dotnet", "Program.cs"]
+
+# final stage/image
+FROM mcr.microsoft.com/dotnet/aspnet:5.0
+WORKDIR /app
+COPY --from=build /app ./
+ENTRYPOINT ["dotnet", "BlazorFrontEnd.dll"]
