--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Db" />
+    </ItemGroup>
+
 </Project>
