--- a/BlazorFrontEnd/Dockerfile
+++ b/BlazorFrontEnd/Dockerfile
@@ -11,4 +11,6 @@ RUN dotnet publish -c release -o /app --no-restore
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
 WORKDIR /app
 COPY --from=build /app ./
-ENTRYPOINT ["dotnet", "RestWebApi.dll"]
+RUN ls -l
+
+ENTRYPOINT ["dotnet", "BlazorFrontEnd.dll"]
